add paper dates

--- a/_config.yml
+++ b/_config.yml
@@ -60,9 +60,9 @@ author:
   goodreads        : # Username
   google_plus      : # Username
   keybase          : # Username
-  instagram        : # Username
+  instagram        : notorious.ak47
   lastfm           : # Username
-  linkedin         : notorious.ak7
+  linkedin         : https://www.linkedin.com/in/aditya-khan-56b19221b/
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
