--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   keybase          : # Username
   instagram        : notorious.ak47
   lastfm           : # Username
-  linkedin         : https://www.linkedin.com/in/aditya-khan-56b19221b/
+  linkedin         : aditya-khan-56b19221b
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
